--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,1 @@
-Options +Includes
-AddType text/html .shtml
-AddHandler server-parsed .shtml
+DirectoryIndex index.html index.htm index.php index.shtml index.shtm
