Added schema information

--- a/test/fixtures/sports.yml
+++ b/test/fixtures/sports.yml
@@ -13,3 +13,18 @@ two:
   content: MyString
   season: MyString
   photo_path: MyString
+# == Schema Information
+#
+# Table name: sports
+#
+#  id         :integer         not null, primary key
+#  slug       :string(255)
+#  title      :string(255)
+#  content    :text
+#  season     :string(255)
+#  photo_path :string(255)
+#  created_at :datetime        not null
+#  updated_at :datetime        not null
+#  alert      :text
+#
+
