--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,55 +1,42 @@
 ---
-728x90-A.png: 728x90-A.png
-Apple-Icon-Retina.png: Apple-Icon-Retina.png
-Apple-Icon.png: Apple-Icon.png
-Next.png: Next.png
-Prev.png: Prev.png
-background.png: background.png
-entrance.png: entrance.png
-glyphicons-halflings-white.png: glyphicons-halflings-white.png
-glyphicons-halflings.png: glyphicons-halflings.png
-rails.png: rails.png
-sports/baseball.png: sports/baseball.png
-sports/basketball.png: sports/basketball.png
-sports/bowling.png: sports/bowling.png
-sports/fieldhockey.png: sports/fieldhockey.png
-sports/football.png: sports/football.png
-sports/golf.png: sports/golf.png
-sports/gymnastics.png: sports/gymnastics.png
-sports/soccer.png: sports/soccer.png
-sports/softball.png: sports/softball.png
-sports/swimming.png: sports/swimming.png
-sports/tennis.png: sports/tennis.png
-sports/track.png: sports/track.png
-sports/volleyball.png: sports/volleyball.png
-sports/wrestling.png: sports/wrestling.png
-ssDeepLink.png: ssDeepLink.png
-announcements.js: announcements.js
-application.js: application.js
-bootstrap.min.js: bootstrap.min.js
-home.js: home.js
-home.js.js: home.js.js
-sports.js: sports.js
-static_pages.js: static_pages.js
-users.js: users.js
-_all.css: _all.css
-_sportstiles.css: _sportstiles.css
-about.css: about.css
-announcements.css: announcements.css
-application.css: application.css
-bootstrap-responsive.css: bootstrap-responsive.css
-bootstrap.css: bootstrap.css
-home.css: home.css
-home/index.css: home/index.css
-scaffolds.css: scaffolds.css
-sports_index.css: sports_index.css
-sports_page.css: sports_page.css
-static_pages.css: static_pages.css
-users.css: users.css
-coffee-script.js: coffee-script.js
-jquery-ui.js: jquery-ui.js
-jquery-ui.min.js: jquery-ui.min.js
-jquery.js: jquery.js
-jquery.min.js: jquery.min.js
-jquery.min.map: jquery.min.map
-jquery_ujs.js: jquery_ujs.js
+728x90-A.png: 728x90-A-a0be2ecbfb5ab51d575a62948fa62c4d.png
+Apple-Icon-Retina.png: Apple-Icon-Retina-248a03bd9e0471557a4b45b491cb1850.png
+Apple-Icon.png: Apple-Icon-a20229dc427271310c137567fba7adaa.png
+Next.png: Next-0742f1627231d0c98182f924221e221b.png
+Prev.png: Prev-0c4b54a73928257cded113791288532c.png
+background.png: background-8885f29c61a7b958413282fe5588392c.png
+entrance.png: entrance-610a08209427321488aac6a2cfd2f340.png
+glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
+glyphicons-halflings.png: glyphicons-halflings-5215cea9f73817c3242b7a67f482ebdd.png
+rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
+sports/baseball.png: sports/baseball-470487966d69624591695c92edd34d72.png
+sports/basketball.png: sports/basketball-5eed57b5260bc5c7966d689791a9f964.png
+sports/bowling.png: sports/bowling-1c35870a44bd2c1ca2c06e0b30b36a1e.png
+sports/fieldhockey.png: sports/fieldhockey-60a656a26fe90c512c58aa995d6ecec7.png
+sports/football.png: sports/football-2ba26064c5684c3084d4a64daead60d8.png
+sports/golf.png: sports/golf-91038e6984d72b54900f3052b24a281a.png
+sports/gymnastics.png: sports/gymnastics-9056c2649d56d8d7905bd48fe4ba4423.png
+sports/soccer.png: sports/soccer-14e4ad2d312401d9ea661f65ba6e1fb4.png
+sports/softball.png: sports/softball-6f4d6b0f83ff2742fd86ac146f9585fa.png
+sports/swimming.png: sports/swimming-15395c84d168de7f2b9d09e9098d1f4c.png
+sports/tennis.png: sports/tennis-528132c7a6c47581dc6dea4f8bf5336d.png
+sports/track.png: sports/track-e8f240ebcf4d1e94cfb54a7a64c24c3e.png
+sports/volleyball.png: sports/volleyball-aa8555652d96ed6706f24c4a5ce91ffb.png
+sports/wrestling.png: sports/wrestling-4696e1f2d5017019df454f7e09cf47ff.png
+ssDeepLink.png: ssDeepLink-596c2d241a6d596f8f54672dc098cd1f.png
+application.js: application-b5c4645aaebaa9e16b293a89a6ab9b0e.js
+_all.css: _all-184882344b2203962756455d438ceb0f.css
+_sportstiles.css: _sportstiles-fb713d92bdcfbbf214990cdb106571ae.css
+about.css: about-7270767b2a9e9fff880aa5de378ca791.css
+announcements.css: announcements-7270767b2a9e9fff880aa5de378ca791.css
+application.css: application-8c3be74dda4a9b8c8c77f47867a6b467.css
+bootstrap-responsive.css: bootstrap-responsive-e496d702b0e021166743afdb4f2704b6.css
+bootstrap.css: bootstrap-ff86de2bca322a1c915db0856290ce5c.css
+home.css: home-7270767b2a9e9fff880aa5de378ca791.css
+home/index.css: home/index-c7d77c01d0019f50629a7483a6d8e936.css
+scaffolds.css: scaffolds-0149f820dbdd285aa65e241569d8c256.css
+sports_index.css: sports_index-cf232631fa748e7fe8a339dd4267b608.css
+sports_page.css: sports_page-8664f533bb86b6025c3695742e0452c8.css
+static_pages.css: static_pages-7270767b2a9e9fff880aa5de378ca791.css
+users.css: users-7270767b2a9e9fff880aa5de378ca791.css
+jquery.min.map: jquery.min-0633f0a59e3d0cd55ac3518f228b2893.map
