Removing tmp/ from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,18 @@
-*.spc
-.DS_Store
-.scssc
-/Build
+*.rbc
+*.sassc
 .sass-cache
-/log
+capybara-*.html
+.rspec
+.rvmrc
 /.bundle
-/tmp
-*.sqlite3
-development.sqlite3
-/tmp/cache/assets/C95/AC0/sprockets%2F8627b08a501db241b20b5115b94b7d60
-/tmp/cache/assets/CE5/650/sprockets%2F8ab512c9b33ac90e699b73469d71f061
-/tmp/cache/assets/D18/690/sprockets%2F70af6a927c2d63a4aee4982891d6a951
-/tmp/cache/assets/D4E/1B0/sprockets%2Ff7cbd26ba1d28d48de824f0e94586655
-/tmp/cache/assets/D62/210/sprockets%2F0c9f5a68e10c76b2d39acc37bb242e22
-/tmp/cache/assets/D67/C10/sprockets%2F0171d90fc56a21fc0ce8f80b2d2f376f
-/tmp/cache/assets/D6D/8D0/sprockets%2F365c534a6669e62faee0ddd23cbe0555
-/tmp/cache/assets/D7B/C60/sprockets%2F130ef7d4e2d7b667bc57fc704eff7085
-/tmp/cache/assets/D91/080/sprockets%2Fbcca522c6302f184f12fe0e8a7d7e71a
-/tmp/cache/assets/D9F/300/sprockets%2Fc13fc73ceafa45876a901b3e775b83ae
-/tmp/cache/assets/DD7/950/sprockets%2F3665aa30fefe8e40fe1f86cc5f90de35
-/tmp/cache/assets/E04/890/sprockets%2F2f5173deea6c795b8fdde723bb4b63af
+/vendor/bundle
+/log/*
+/tmp/*
+/db/*.sqlite3
+/public/system/*
+/coverage/
+/spec/tmp/*
+**.orig
+rerun.txt
+pickle-email-*.html
+.project
